# Varco

./: CMakeLists.txt
Win32Tests/: TestClientArea.sln
Win32Tests/TestClientArea/: Resource.aps  Resource.rc  Resource1.aps  TestClientArea.cpp  TestClientArea.vcxproj  TestClientArea.vcxproj.filters  resource.h  stdafx.cpp
src/: init.cpp
src/WindowHandling/: BaseOSWindow_Win.cpp  BaseOSWindow_Win.hpp  MainWindow.cpp  MainWindow.hpp
